[package]
name = "config-utils"
version = "0.2.0"
authors = ["Stackable GmbH <info@stackable.tech>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/stackabletech/config-utils"

[dependencies]
# We try hard to have as less dependencies as possible!
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.4"
snafu = "0.8"

[dev-dependencies]
rstest = "0.21"
similar-asserts = "1.5"
tempfile = "3.10"
