[package]
name = "config-utils"
version = "0.3.0"
authors = ["Stackable GmbH <info@stackable.tech>"]
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/stackabletech/config-utils"

[dependencies]
# We try hard to have as less dependencies as possible!
clap = { version = "4.6", features = ["derive"] }
lazy_static = "1.5"
snafu = "0.9"

[dev-dependencies]
rstest = "0.26"
similar-asserts = "2.0"
tempfile = "3.27"
