[package]
name = "config-utils"
version = "0.4.0"
authors = ["Stackable GmbH <info@stackable.tech>"]
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/stackabletech/config-utils"

[dependencies]
# We try hard to have as less dependencies as possible!
clap = { version = "4.6", features = ["derive"] }
snafu = "0.9"

[dev-dependencies]
rstest = "0.26"
similar-asserts = "2.0"
tempfile = "3.27"
